add index banner

--- a/app/views/tipsy/index.html.erb
+++ b/app/views/tipsy/index.html.erb
@@ -1,1 +1,12 @@
-<h1>TipsyAsia</h1>
+<div class="banner">
+  <!-- <video autoplay id="bgvid" loop poster="" preload="auto" loop="" autoplay="" muted="">
+    <source src="http://reservelounge.com/wp-content/uploads/2015/06/Video-Header1.m4v" type="video/mp4">
+  </video> -->
+  <div id="bgvid"></div>
+  <div class="empty200px"></div>
+  <h1>TipsyAsia</h1>
+  <div class="empty300px"></div>
+</div>
+<div class="container">
+  
+</div>
