--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -1,3 +1,37 @@
-// Place all the styles related to the tipsy controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.empty100px{height:100px;}
+.empty200px{height:200px;}
+.empty300px{height:300px;}
+
+.banner {
+  overflow: hidden;
+
+  #bgvid {
+    z-index: -100;
+    width: 100%;
+    height: 600px;
+    position: absolute;
+    top: 0;
+    background-image: image-url("banner.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    // -webkit-filter: blur(2px);
+    // filter: blur(2px);
+    // transform: scale(1.1);
+  }
+  
+  h1 {
+    color: #fff;
+    display: block;
+    text-align: center;
+  }
+
+}
+
+.container {
+  background: #000;
+  position: relative;
+  width: 100%;
+  height: 600px;
+}
