--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -3,6 +3,10 @@
 .empty200px{height:200px;}
 .empty300px{height:300px;}
 
+body {
+  background: #000;
+}
+
 .banner {
   overflow: hidden;
 
@@ -34,4 +38,19 @@
   position: relative;
   width: 100%;
   height: 600px;
+  padding: 0;
+
+  .owl-carousel {
+
+    img {
+      width: 100%;
+      height: 550px;
+    }
+
+  }
+
 }
+
+
+
+
