--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,6 +8,23 @@
 </head>
 <body>
 
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+<!-- User message -->
+<div class="pull-right">
+  <% if current_user %>
+    <%= link_to('Log out', destroy_user_session_path, :method => :delete) %> |
+    <%= link_to('Edit', edit_registration_path(:user)) %> |
+  <% else %>
+    <%= link_to('Sign up', new_registration_path(:user)) %> |
+    <%= link_to('Log in', new_session_path(:user)) %> |
+  <% end %>
+
+</div>
+<div class="clearfix"></div>
+<!-- User message -->
+
 <%= yield %>
 
 </body>
