--- a/app/views/admin/store/index.html.erb
+++ b/app/views/admin/store/index.html.erb
@@ -1,1 +1,15 @@
 <h1>ADMIN</h1>
+
+
+<div class="col-md-6">
+  <table class="table table-hover">
+    <tr class="info">
+      <td>User name</td>
+      <td>Email</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+</div>
