--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,10 +15,15 @@
 <div class="pull-right">
   <% if current_user %>
     <%= link_to('Log out', destroy_user_session_path, :method => :delete) %> |
-    <%= link_to('Edit', edit_registration_path(:user)) %> |
+    <%= link_to('Edit', edit_registration_path(:user)) %>
   <% else %>
     <%= link_to('Sign up', new_registration_path(:user)) %> |
-    <%= link_to('Log in', new_session_path(:user)) %> |
+    <%= link_to('Log in', new_session_path(:user)) %>
+  <% end %>
+  <% if current_user %>
+    <% if current_user.role == 1 %>
+      | <%= link_to 'Admin', admin_root_path %>
+    <% end %>
   <% end %>
 </div>
 <div class="clearfix"></div>
