--- a/app/views/admin/store/index.html.erb
+++ b/app/views/admin/store/index.html.erb
@@ -1,4 +1,6 @@
-<h1>ADMIN</h1>
+<div class="page-header">
+  <h1>Admin console</h1>
+</div>
 
 
 <div class="col-md-6">
@@ -8,8 +10,10 @@
       <td>Email</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <% User.all.each do |x| %>
+        <td><%= x.name %></td>
+        <td><%= x.email %></td>
+      <% end %>
     </tr>
   </table>
 </div>
