--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <%= link_to('Log in', new_session_path(:user)) %> 
   <% end %>
   <% if current_user %>
-    <% if current_user.role == 1 %>
+    <% if current_user.admin? %>
       | <%= link_to 'Admin', admin_root_path %>
     <% end %>
   <% end %>
