--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,23 +9,23 @@
 <body>
 
 <!-- Flash message -->
-  <% if flash[:notice].present? %>
-    <div class="alert alert-success" role="alert">
-      <%= flash[:notice] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  <% end %>
-  <% if flash[:alert].present? %>
-    <div class="alert alert-danger" role="alert">
-      <%= flash[:alert] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button> 
-    </div>
-  <% end %>
-  <!-- Flash message -->
+<% if flash[:notice].present? %>
+  <div class="alert alert-success" role="alert">
+    <%= flash[:notice] %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% end %>
+<% if flash[:alert].present? %>
+  <div class="alert alert-danger" role="alert">
+    <%= flash[:alert] %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button> 
+  </div>
+<% end %>
+<!-- Flash message -->
 
 <!-- User message -->
 <div class="pull-right">
@@ -39,6 +39,7 @@
   <% if current_user %>
     <% if current_user.admin? %>
       | <%= link_to 'Admin', admin_root_path %>
+      | <%= link_to 'Home', root_path %>
     <% end %>
   <% end %>
 </div>
