--- a/app/views/admin/store/new.html.erb
+++ b/app/views/admin/store/new.html.erb
@@ -2,15 +2,7 @@
 
 <%= form_for @store, :url => admin_store_index_path do |n|  %>
 
-<div class="form-group">
-  <%= n.label :name, "Name" %>
-  <%= n.text_field :name, :class => "form-control", :required => "required" %>
-</div>
-
-<div class="form-group">
-  <%= n.label :description, "Description" %>
-  <%= n.text_area :description, :class => "form-control", :required => "required" %>    
-</div>
+<%= render :partial => 'form', :locals => { :n => n } %>
 
 <%= n.submit "Create", :class => "btn btn-primary" %>
 <%= link_to "Cancel", admin_store_index_path, :class => "btn btn-info pull-right" %>
