add DJ model, add admin-DJ CRUD.

--- a/app/views/admin/store/index.html.erb
+++ b/app/views/admin/store/index.html.erb
@@ -4,13 +4,6 @@
 
 
 <div class="col-md-12">
-  
-  <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><%= link_to 'Store', admin_root_path %></li>
-    <li role="presentation"><%= link_to 'User', admin_user_index_path %></li>
-    <li role="presentation"><a href="#">Event</a></li>
-    <li role="presentation"><a href="#">DJ</a></li>
-  </ul>
 
   <table class="table table-hover table-striped">
     <tr>
@@ -42,5 +35,5 @@
     </tr>
   </table>
 
-  <%= link_to 'New store', new_admin_store_path, :class => "btn btn-primary" %>
+  <%= link_to 'New store', new_admin_store_path, :class => "btn btn-default" %>
 </div>
