add DJ photo upload

--- a/app/views/admin/dj/_form.html.erb
+++ b/app/views/admin/dj/_form.html.erb
@@ -10,6 +10,5 @@
 </div>
 
 <div class="form-group">
-  <%= n.label :photo_url, "Photo_url" %>
-  <%= n.text_field :photo_url, :class => "form-control" %>    
-</div>
+  <%= n.file_field :photo %>
+</div> 
