--- a/app/views/admin/dj/index.html.erb
+++ b/app/views/admin/dj/index.html.erb
@@ -12,7 +12,7 @@
   <% Dj.all.each do |x| %>
   <tr>
     <td>
-      <%= image_tag x.photo.url(:thumb) %>
+      <%= image_tag x.photo.url(:thumb), :class => "img-rounded" %>
     </td>
     <td><%= link_to x.name, admin_dj_path(x) %></td>
     <td>
