--- a/app/views/admin/store/index.html.erb
+++ b/app/views/admin/store/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Store console</h1>
+  <h1>Store console <%= link_to 'New store', new_admin_store_path, :class => "btn btn-default" %></h1>
 </div>
 
 
