--- a/app/views/admin/event/_form.html.erb
+++ b/app/views/admin/event/_form.html.erb
@@ -1,29 +1,89 @@
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Event info</h3>
+  </div>
+  <div class="panel-body">
+    
+    <div class="form-group">
+      <%= n.label :title, "Title" %>
+      <%= n.text_field :title, :class => "form-control", :required => "required" %>
+    </div>
 
-<div class="form-group">
-  <%= n.label :title, "Title" %>
-  <%= n.text_field :title, :class => "form-control", :required => "required" %>
-</div>
+    <div class="form-group">
+      <%= n.label :description, "Description" %>
+      <%= n.text_area :description, :class => "form-control" %>    
+    </div>
 
-<div class="form-group">
-  <%= n.label :description, "Description" %>
-  <%= n.text_area :description, :class => "form-control" %>    
-</div>
-
-<div class="row">
-<div class="col-md-6">
-<div class="form-group">
-      <%= n.label :start_date, "Start_at:" %>
-      <%= n.text_field :start_date , :class => "form-control datepicker", :"data-provide" => "datepicker" %>    
-      <%= n.time_select :start_time, :default => {:hour => '08', :minute => '00'} %>
-</div>
-</div>
+    <div class="row">
+    <div class="col-md-6">
+    <div class="form-group">
+          <%= n.label :start_date, "Start_at:" %>
+          <%= n.text_field :start_date , :class => "form-control datepicker", :"data-provide" => "datepicker" %>    
+          <%= n.time_select :start_time, :default => {:hour => '08', :minute => '00'} %>
+    </div>
+    </div>
 
 
-<div class="col-md-6">
-<div class="form-group">
-  <%= n.label :due_date, "Due_to:" %>
-  <%= n.text_field :due_date, :class => "form-control datepicker", :"data-provide" => "datepicker" %>    
-  <%= n.time_select :due_time, :default => {:hour => '12', :minute => '00'} %>    
+    <div class="col-md-6">
+    <div class="form-group">
+      <%= n.label :due_date, "Due_to:" %>
+      <%= n.text_field :due_date, :class => "form-control datepicker", :"data-provide" => "datepicker" %>    
+      <%= n.time_select :due_time, :default => {:hour => '12', :minute => '00'} %>    
+    </div>
+    </div>
+    </div>
+
+
+
+      <%= n.label :status, "Status" %>
+      <%= n.select :status, ["Public","Private"] %> 
+
+  </div>
 </div>
+
+
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Contact info</h3>
+  </div>
+  <div class="panel-body">
+    
+    <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= n.label :contact, "Contact" %>
+        <%= n.text_field :contact, :class => "form-control" %>    
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= n.label :phone, "Phone" %>
+        <%= n.text_field :phone, :class => "form-control" %>    
+      </div>
+    </div>
+    
+    <div class="col-md-3">
+      <div class="form-group">
+        <%= n.label :city, "City" %>
+        <%= n.text_field :city, :class => "form-control" %>    
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="form-group">
+        <%= n.label :address, "Address" %>
+        <%= n.text_field :address, :class => "form-control" %>    
+      </div>
+    </div>
+
+  </div>
 </div>
+
+
 </div>
+
+
+
+
+
+
+
