--- a/app/views/admin/event/new.html.erb
+++ b/app/views/admin/event/new.html.erb
@@ -1,3 +1,8 @@
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+
+
 <h1>NEW EVENT</h1>
 
 <%= form_for @event, :url => admin_event_index_path do |n|  %>
@@ -11,6 +16,8 @@
 
 <% end %>
 
+  </div>  
+</div>
 
 <script>
 
