--- a/app/views/admin/store/_form.html.erb
+++ b/app/views/admin/store/_form.html.erb
@@ -6,7 +6,7 @@
 
 <div class="form-group">
   <%= n.label :description, "Description" %>
-  <%= n.text_area :description, :class => "form-control" %>    
+  <%= n.text_area :description, :class => "form-control", :rows => "5"  %>    
 </div>
 
 <div class="form-group">
@@ -26,5 +26,5 @@
 
 <div class="form-group">
   <%= n.label :hours, "Hours" %>
-  <%= n.text_area :hours, :class => "form-control" %>    
+  <%= n.text_area :hours, :class => "form-control", :rows => "7" %>    
 </div>
