--- a/app/views/admin/store/show.html.erb
+++ b/app/views/admin/store/show.html.erb
@@ -24,4 +24,4 @@
 </table>
 
 
-<%= link_to "Back", admin_store_index_path, :class => "btn btn-info" %>
+<%= link_to "Back", admin_store_index_path, :class => "btn btn-default" %>
