--- a/app/views/admin/dj/index.html.erb
+++ b/app/views/admin/dj/index.html.erb
@@ -28,8 +28,12 @@
       <% end %>
     </td>
     <td>
-      <%= link_to 'Edit', edit_admin_dj_path(x), :class => "btn btn-default btn-xs" %>
-      <%= link_to 'Delete', admin_dj_path(x), :method => 'delete', :data => { :confirm => "Are you sure?" }, :class => "btn btn-danger btn-xs" %>
+      <%= link_to edit_admin_dj_path(x), :class => "btn btn-xs" do %>
+        <i class="glyphicon glyphicon-pencil"></i>
+      <% end %>
+      <%= link_to admin_dj_path(x), :method => "delete", :data => { :confirm => "Are you sure?" }, :class => "btn btn-xs" do %>
+        <i class="glyphicon glyphicon-trash"></i>
+      <% end %>
     </td>
   </tr>
   <% end %>
