--- a/app/views/admin/store/edit.html.erb
+++ b/app/views/admin/store/edit.html.erb
@@ -6,6 +6,6 @@
 <%= render :partial => 'form', :locals => { :n => n } %>
 
 <%= n.submit "Update", :class => "btn btn-primary" %>
-<%= link_to "Cancel", admin_store_index_path, :class => "btn btn-info" %>
+<%= link_to "Cancel", admin_store_index_path, :class => "btn btn-info pull-right" %>
 
 <% end %>
