--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,7 +34,8 @@
     <%= link_to('Edit', edit_registration_path(:user)) %>
   <% else %>
     <%= link_to('Sign up', new_registration_path(:user)) %> |
-    <%= link_to('Log in', new_session_path(:user)) %>
+    <%= link_to('Log in', new_session_path(:user)) %> |
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
   <% if current_user %>
     <% if current_user.admin? %>
@@ -46,13 +47,17 @@
 <div class="clearfix"></div>
 <!-- User message -->
 
-<% @where = params[:controller] %>
-<ul class="nav nav-tabs">
-  <li role="presentation" class="<%= @where == "admin/store" ? "active" : "" %>"><%= link_to 'Store', admin_root_path %></li>
-  <li role="presentation" class="<%= @where == "admin/user" ? "active" : "" %>" ><%= link_to 'User', admin_user_index_path %></li>
-  <li role="presentation" class="<%= @where == "admin/event" ? "active" : "" %>" ><%= link_to 'Event', admin_event_index_path %></li>
-  <li role="presentation" class="<%= @where == "admin/dj" ? "active" : "" %>" ><%= link_to 'DJ', admin_dj_index_path %></li>
-</ul>
+<% if current_user %>
+  <% if current_user.admin? %>
+    <% @where = params[:controller] %>
+    <ul class="nav nav-tabs">
+      <li role="presentation" class="<%= @where == "admin/store" ? "active" : "" %>"><%= link_to 'Store', admin_root_path %></li>
+      <li role="presentation" class="<%= @where == "admin/user" ? "active" : "" %>" ><%= link_to 'User', admin_user_index_path %></li>
+      <li role="presentation" class="<%= @where == "admin/event" ? "active" : "" %>" ><%= link_to 'Event', admin_event_index_path %></li>
+      <li role="presentation" class="<%= @where == "admin/dj" ? "active" : "" %>" ><%= link_to 'DJ', admin_dj_index_path %></li>
+    </ul>
+  <% end %>
+<% end %>
 
 
 <%= yield %>
