--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
     <%= link_to('Edit', edit_registration_path(:user)) %> 
   <% else %>
     <%= link_to('Sign up', new_registration_path(:user)) %> |
-    <%= link_to('Log in', new_session_path(:user)) %> 
+    <%= link_to('Log in', new_session_path(:user)) %> |
+    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
   <% if current_user %>
     <% if current_user.admin? %>
