--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -55,6 +55,7 @@
       <li role="presentation" class="<%= @where == "admin/user" ? "active" : "" %>" ><%= link_to 'User', admin_user_index_path %></li>
       <li role="presentation" class="<%= @where == "admin/event" ? "active" : "" %>" ><%= link_to 'Event', admin_event_index_path %></li>
       <li role="presentation" class="<%= @where == "admin/dj" ? "active" : "" %>" ><%= link_to 'DJ', admin_dj_index_path %></li>
+      <li role="presentation" class="<%= @where == "admin/categories" ? "active" : "" %>" ><%= link_to 'Category', admin_categories_path %></li>
     </ul>
   <% end %>
 <% end %>
