add store keyword search.

--- a/app/assets/stylesheets/admin/store.scss
+++ b/app/assets/stylesheets/admin/store.scss
@@ -6,6 +6,10 @@ body {
   width: 50px;
 }
 
+.search-store {
+  margin-top: 20px;
+}
+
 .category-showbox-content {
   background: #000;
   position: relative;
