--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the categories controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.category-showbox-content {
+  background: #000;
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+
+  img {
+    position: relative;
+    width: 100%;
+  }
+
+  .description {
+    display: block;
+    background: rgba(0,0,0,0.3);
+    box-sizing : border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    text-align: center;
+
+    p {
+      position: relative;
+      font-size: 40px;
+      top: 65px;
+      color: #fff;
+      
+    }
+
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+  
+}
