--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,6 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<div id="user-status">
-  <div class="">
-    <% if current_user %>
-      <%= link_to('Log out', destroy_user_session_path, :method => :delete) %> |
-      <%= link_to('Edit', edit_registration_path(:user)) %> 
-    <% else %>
-      <%= link_to('Sign up', new_registration_path(:user)) %> |
-      <%= link_to('Log in', new_session_path(:user)) %> |
-      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-    <% end %>
-    <% if current_user %>
-      <% if current_user.admin? %>
-        | <%= link_to 'Admin', admin_root_path %>
-      <% end %>
-    <% end %>
-  </div>
-  <div class="clearfix"></div>
-</div>
  
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -37,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Tipsy</a>
+      <%= link_to 'Tipsy', root_path, :class => "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="menu">
@@ -46,7 +27,7 @@
         <li class="dropdown active">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">All</a></li>
+            <li><%= link_to 'All', root_path %></li> 
             <li><a href="#">Pub</a></li>
             <li><a href="#">Club</a></li>
             <li><a href="#">Bar</a></li>
@@ -56,7 +37,19 @@
         <li><a href="#">Event</a></li>
         <li><a href="#">Meetup</a></li>
         <li><a href="#">Taxi</a></li>
-        <li><a href="#">Setting</a></li>
+        <li role="separator" class="divider visible-xs-block"></li>
+        <% if current_user %>
+          <li><%= link_to 'Setting', profile_path(current_user) %></li>
+        <% else %>
+          <li><%= link_to('Sign up', new_registration_path(:user), :class => "hidden-xs") %></li>
+          <li><%= link_to('Log in', new_session_path(:user)) %></li>
+          <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+        <% end %>
+        <% if current_user %>
+          <% if current_user.admin? %>
+            <li><%= link_to 'Admin', admin_root_path %></li>
+          <% end %>
+        <% end %>
       </ul>
     </div>
   </div>
