--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,15 @@
-// Place all the styles related to the events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.container {
+  background: #000;
+  position: relative;
+  width: 100%;
+  padding: 0;
+
+  .owl-carousel {
+
+    img {
+      width: 100%;
+    }
+
+  }
+
+}
