--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <li><a href="#">Other</a></li>
           </ul>
         </li>
-        <li><a href="#">Event</a></li>
+        <li><%= link_to 'Event', events_path %></li>
         <li><a href="#">Meetup</a></li>
         <li><a href="#">Taxi</a></li>
         <li role="separator" class="divider visible-xs-block"></li>
