--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the stores controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.store-showbox-content {
+  background: #000;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+
+  img {
+    position: relative;
+    width: 100%;
+  }
+
+  .def-img {
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+  }
+
+  .description {
+    display: block;
+    background: rgba(0,0,0,0.1);
+    box-sizing : border-box;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    text-align: center;
+
+    p {
+      position: relative;
+      font-size: 40px;
+      top: 100px;
+      color: #fff;
+      
+    }
+
+  }
+
+}
