--- a/app/assets/stylesheets/tipsy.scss
+++ b/app/assets/stylesheets/tipsy.scss
@@ -4,7 +4,11 @@
 .empty300px{height:300px;}
 
 body {
-  background: #000;
+  background: #002961;
+}
+
+.navbar-brand {
+  padding: 5px;
 }
 
 .banner {
