--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= params[:controller] %>">
  
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Tipsy', root_path, :class => "navbar-brand" %>
+      <%= link_to image_tag('logo.png', :class => "navbar-brand"), root_path %>
     </div>
 
     <div class="collapse navbar-collapse" id="menu">
@@ -27,7 +27,7 @@
         <li class="dropdown active">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'All', root_path %></li> 
+            <li><%= link_to 'All', stores_path %></li> 
             <li><a href="#">Pub</a></li>
             <li><a href="#">Club</a></li>
             <li><a href="#">Bar</a></li>
