--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,1 +1,22 @@
-<h1>Store</h1>
+
+<div class="col-xs-12">
+  <% @store.each do |y| %>
+     <div class="store-showbox-content">
+        <%= link_to stores_path(:category => y) do %>
+          <% if y.yelp_image == nil %>
+            <%= image_tag('store_default.jpg', :class => 'def-img') %>
+          <% else %>
+            <%= image_tag(y.yelp_image) %>
+          <% end %>
+          <div class="description">
+            <p><%= y.name %></p>
+          </div>
+        <% end %>
+     </div>
+  <% end %>
+</div>
+
+
+<div class="text-center">
+<%= paginate @store, :theme => 'twitter-bootstrap-3', :pagination_class => "pagination-sm" %>
+</div>
