--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           </ul>
         </li>
         <li class="<%= @controller == "events" ? "active" : "" %>"><%= link_to 'Event', events_path %></li>
-        <li><a href="#">DJ</a></li>
+        <li class="<%= @controller == "dj" ? "active" : "" %>"><%= link_to 'DJ', dj_index_path %></li>
         <li><a href="#">Meetup</a></li>
         <li><a href="#">Taxi</a></li>
         <li role="separator" class="divider visible-xs-block"></li>
