--- a/app/assets/stylesheets/dj.scss
+++ b/app/assets/stylesheets/dj.scss
@@ -1,3 +1,43 @@
-// Place all the styles related to the dj controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.dj {
+
+  .col-xs-4 {
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    text-align: center;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    h3 {
+      color: white;
+      position: absolute;
+      bottom: 0;
+      display: block;
+      width: 100%;
+      z-index: 100;
+      background: rgba(0,0,0,0.1);
+    }
+  }
+
+  .col-xs-12 {
+    position: relative;
+    text-align: center;
+
+    img {
+      width: 100%;
+    }
+
+    h1 {
+      position: absolute;
+      bottom: 0;
+      display: block;
+      z-index: 100;
+      background: rgba(0,0,0,0.2);
+      width: 100%;
+    }
+  }
+}
+
