--- a/app/assets/stylesheets/admin/dj.scss
+++ b/app/assets/stylesheets/admin/dj.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admin::dj controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.show-dj-photo {
+
+}
+
+iframe {
+  width: 100%;
+}
