--- a/app/views/admin/dj/show.html.erb
+++ b/app/views/admin/dj/show.html.erb
@@ -1,7 +1,11 @@
 <div class="row">
   <div class="col-md-6">
     <h1><%= @dj.name %></h1>
-    <%= image_tag @dj.photo.url %>
+     <% if @dj.photo.exists? == false %>
+        <%= image_tag("dj_img.jpg", :class => "img-responsive") %>
+      <% else %>
+        <%= image_tag @dj.photo.url(:medium), :class => "img-responsive" %>
+      <% end %>
     <table class="table">
       <tr>
         <th>Description</th>
