--- a/app/views/dj/index.html.erb
+++ b/app/views/dj/index.html.erb
@@ -1,11 +1,11 @@
 
 <% @dj.each do |x| %>
-  <div class="col-xs-4">
+  <div class="col-xs-6">
     <%= link_to dj_path(x) do %>
       <% if x.photo.exists? == false %>
         <%= image_tag("dj_img.jpg", :class => "") %>
       <% else %>
-        <%= image_tag x.photo.url, :class => "" %>
+        <%= image_tag x.photo.url(:medium), :class => "" %>
       <% end %>
       <h3><%= x.name %></h3>
     <% end %>
