--- a/app/assets/stylesheets/dj.scss
+++ b/app/assets/stylesheets/dj.scss
@@ -1,8 +1,8 @@
-.dj {
+.djs {
   iframe {
         width: 100%;
       }
-  
+
   .col-xs-6 {
     position: relative;
     overflow: hidden;
@@ -45,7 +45,7 @@
 }
 
 @media screen and (max-width: 750px) {
-  .dj {
+  .djs {
 
     .col-xs-6 {
 
