--- a/app/views/admin/djs/index.html.erb
+++ b/app/views/admin/djs/index.html.erb
@@ -10,7 +10,7 @@
     <th>Description</th>
     <th></th>
   </tr>
-  <% Dj.all.each do |x| %>
+  <% Djs.all.each do |x| %>
   <tr>
     <td>
       <% if x.photo.exists? == false %>
