--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           </ul>
         </li>
         <li class="<%= @controller == "events" ? "active" : "" %>"><%= link_to 'Event', events_path %></li>
-        <li class="<%= @controller == "dj" ? "active" : "" %>"><%= link_to 'DJ', dj_index_path %></li>
+        <li class="<%= @controller == "djs" ? "active" : "" %>"><%= link_to 'DJ', djs_path %></li>
         <li><a href="#">Meetup</a></li>
         <li><a href="#">Taxi</a></li>
         <li role="separator" class="divider visible-xs-block"></li>
