--- a/app/views/admin/djs/edit.html.erb
+++ b/app/views/admin/djs/edit.html.erb
@@ -5,7 +5,7 @@
 <%= render :partial => 'form', :locals => { :n => n } %>
 
 <%= n.submit "Update", :class => "btn btn-primary" %>
-<%= link_to "Cancel", admin_dj_index_path, :class => "btn btn-info pull-right" %>
+<%= link_to "Cancel", admin_djs_path, :class => "btn btn-info pull-right" %>
 
 <div class="clearfix"></div>
 
