--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -9,7 +9,7 @@
     <%= render :partial => 'form', :locals => { :n => n } %>
 
     <%= n.submit "Update", :class => "btn btn-primary" %>
-    <%= link_to "Cancel", admin_event_index_path, :class => "btn btn-info pull-right" %>
+    <%= link_to "Cancel", admin_event_path, :class => "btn btn-info pull-right" %>
 
     <div class="clearfix"></div>
 
