--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -5,12 +5,12 @@
 
 <h1>NEW EVENT</h1>
 
-<%= form_for @event, :url => admin_event_index_path do |n|  %>
+<%= form_for @event, :url => admin_events_path do |n|  %>
 
 <%= render :partial => 'form', :locals => { :n => n } %>
 
 <%= n.submit "Create", :class => "btn btn-primary" %>
-<%= link_to "Cancel", admin_event_index_path, :class => "btn btn-info pull-right" %>
+<%= link_to "Cancel", admin_events_path, :class => "btn btn-info pull-right" %>
 
 <div class="clearfix"></div>
 
