--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -53,4 +53,7 @@
 </div>
 
 
-<%= link_to 'Back', admin_event_index_path, :class => "btn btn-default" %>
+<%= link_to 'Back', admin_events_path, :class => "btn btn-default" %>
+
+
+
