--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -53,7 +53,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="<%= @where == "admin/store" ? "active" : "" %>"><%= link_to 'Store', admin_root_path %></li>
       <li role="presentation" class="<%= @where == "admin/user" ? "active" : "" %>" ><%= link_to 'User', admin_user_index_path %></li>
-      <li role="presentation" class="<%= @where == "admin/event" ? "active" : "" %>" ><%= link_to 'Event', admin_event_index_path %></li>
+      <li role="presentation" class="<%= @where == "admin/events" ? "active" : "" %>" ><%= link_to 'Events', admin_events_path %></li>
       <li role="presentation" class="<%= @where == "admin/djs" ? "active" : "" %>" ><%= link_to 'DJ', admin_djs_path %></li>
       <li role="presentation" class="<%= @where == "admin/categories" ? "active" : "" %>" ><%= link_to 'Category', admin_categories_path %></li>
     </ul>
