--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,11 @@
+@import 'masonry/basic';
+@import 'masonry/centered';
+@import 'masonry/fluid';
+@import 'masonry/gutters';
+@import 'masonry/infinitescroll';
+@import 'masonry/right-to-left';
+@import 'masonry/transitions';
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "tipsy";
@@ -10,6 +18,7 @@
 @import 'stores';
 @import 'general';
 @import 'dj';
+
 
 .col-xs-12 {
   padding-left: 0;
