--- a/app/assets/stylesheets/dj.scss
+++ b/app/assets/stylesheets/dj.scss
@@ -1,17 +1,22 @@
 .djs {
+
+  #masonry-container {
+    margin: 0 auto;
+    width: 100%;
+  }
+
   iframe {
         width: 100%;
       }
 
-  .col-xs-6 {
+  .dj-image-box {
     position: relative;
     overflow: hidden;
     padding: 0;
     text-align: center;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 200px;
     }
 
     h3 {
@@ -44,19 +49,29 @@
   }
 }
 
-@media screen and (max-width: 750px) {
+
+@media screen and (max-width: 550px) {
   .djs {
-
-    .col-xs-6 {
-
-      img {
-        height: 100%;
-      }
-    }
     
+    .box {
+      margin: 0;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+
     .col-md-3 {
       padding: 0;
       
+    }
+
+    .dj-image-box {
+      width: 100%;
+
+      img {
+        width: 100%;
+      }
     }
   }
 }
