--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -1,8 +1,16 @@
+.stores {
+
+  .store-show-image {
+    width: 100%;
+  }
+}
+
+
 .store-showbox-content {
   background: #000;
   position: relative;
   width: 100%;
-  height: 300px;
+  // height: 300px;
   overflow: hidden;
 
   img {
@@ -11,11 +19,11 @@
   }
 
   .def-img {
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
+    // -webkit-filter: blur(5px);
+    // filter: blur(5px);
   }
 
-  .description {
+  .store-name {
     display: block;
     background: rgba(0,0,0,0.1);
     box-sizing : border-box;
@@ -27,8 +35,8 @@
 
     p {
       position: relative;
-      font-size: 40px;
-      top: 100px;
+      font-size: 25px;
+      top: 50px;
       color: #fff;
       
     }
