--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,16 +28,7 @@
     <div class="collapse navbar-collapse" id="menu">
       <ul class="nav navbar-nav">
         <li class=""></li>
-        <li class="dropdown <%= @controller == "categories" ? "active" : "" %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Category <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to 'All', stores_path %></li> 
-            <li><a href="#">Pub</a></li>
-            <li><a href="#">Club</a></li>
-            <li><a href="#">Bar</a></li>
-            <li><a href="#">Other</a></li>
-          </ul>
-        </li>
+        <li class="<%= @controller == "categories" ? "active" : "" %>"><%= link_to 'Category', categories_path %></li>
         <li class="<%= @controller == "events" ? "active" : "" %>"><%= link_to 'Event', events_path %></li>
         <li class="<%= @controller == "djs" ? "active" : "" %>"><%= link_to 'DJ', djs_path %></li>
         <li><a href="#">Meetup</a></li>
