--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,22 +1,25 @@
 
-<div class="col-xs-12">
+<div class="store-list">
   <% @store.each do |y| %>
-     <div class="store-showbox-content">
-        <%= link_to stores_path(:category => y) do %>
-          <% if y.yelp_image == nil %>
-            <%= image_tag('store_default.jpg', :class => 'def-img') %>
-          <% else %>
-            <%= image_tag(y.yelp_image) %>
+    <div class="col-xs-6 col-sm-3 col-md-2">
+       <div class="store-showbox-content">
+          <%= link_to store_path(y) do %>
+            <% if y.yelp_image == nil %>
+              <%= image_tag('store_default.jpg', :class => 'def-img') %>
+            <% else %>
+              <%= image_tag(y.yelp_image) %>
+            <% end %>
+            <div class="store-name">
+              <p><%= y.name %></p>
+            </div>
           <% end %>
-          <div class="description">
-            <p><%= y.name %></p>
-          </div>
-        <% end %>
-     </div>
+       </div>
+    </div>
   <% end %>
 </div>
 
 
+
 <div class="text-center">
-<%= paginate @store, :theme => 'twitter-bootstrap-3', :pagination_class => "pagination-sm" %>
+<%#= paginate @store, :theme => 'twitter-bootstrap-3', :pagination_class => "pagination-sm" %>
 </div>
