--- a/app/assets/stylesheets/stores.scss
+++ b/app/assets/stylesheets/stores.scss
@@ -3,6 +3,16 @@
   .store-show-image {
     width: 100%;
   }
+
+  #masonry-container {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .box {
+    padding: 0;
+    width: 200px;
+  }
+
 }
 
 
