--- a/app/views/admin/store/_form.html.erb
+++ b/app/views/admin/store/_form.html.erb
@@ -1,3 +1,10 @@
+<% arr = Category.all.map{ |x| [x.name, x.id] } %>
+<% arr.shift %>
+
+<div class="form-group">
+  <%= n.label :category_id, "Category" %>
+  <%= n.select :category_id, arr, {} ,:class => "form-control", :required => "required" %>
+</div>
 
 <div class="form-group">
   <%= n.label :name, "Name" %>
