--- a/app/views/admin/store/show.html.erb
+++ b/app/views/admin/store/show.html.erb
@@ -2,6 +2,10 @@
 
 <table class="table table-striped">
   <tr>
+    <td>Category:</td>
+    <td><%= @store.category.name %></td>
+  </tr>
+  <tr>
     <td>Phone:</td>
     <td><%= @store.phone %></td>
   </tr>
